--- a/00-G2-CS2B-FAI-April-2021/Question_1.Rmd
+++ b/00-G2-CS2B-FAI-April-2021/Question_1.Rmd
@@ -10,61 +10,103 @@ output:
 ---
 
 
-1 Before answering this question, the R package for Markov chains should be loaded 
+Before answering this question, the R package for Markov chains should be loaded 
 into R using the following code: 
+
+<pre><code>
 install.packages("markovchain") 
 library(markovchain)
-Xt is a Markov chain on the state space {1,2,3} with the following transition matrix: 
-൭
-p 1 – p 0
-q 0 1 – q
-0 r 1 – r
-൱
-where 0 < p, q, r < 1. 
-(i) Construct an R function, with arguments p, q and r, that generates a Markov 
-chain object for Xt. [5] 
+</code></pre>
 
-------------------
+---
 
-Q1
-(i)
-markovchain = 
-function(p,q,r){ 
+```{r echo = FALSE}
+library(markovchain)
+```
+
+$X_t$ is a Markov chain on the state space {1,2,3} with the following transition matrix: 
+
+$$
+\left(\begin{array}{ccc}
+p &  1 – p & 0\\
+q & 0 & 1 – q\\
+0 & r & 1 – r\\
+\end{array}\right)
+$$
+where $0 < p, q, r < 1$. 
+
+---
+
+### Exercises
+
+1. Construct an R function, with arguments p, q and r, that generates a Markov 
+chain object for Xt. 
+
+2.
+
+
+---
+
+#### Exercise 1
+
+
+```{r}
+
+p <- 0.4
+q <- 0.2
+r <- 0.25
+
+P <- matrix(data = c(p,1-p,0,q,0,1-q,0,r,1-r), nrow =3, byrow = TRUE) 
+P
+```
+
+---
+
+
+```{r}
+markovchain = function(p,q,r){ 
+ P = matrix(data = c(p,1-p,0,q,0,1-q,0,r,1-r), nrow =3, byrow = TRUE) 
+ mc = new("markovchain", transitionMatrix = P) 
+ mc
+} 
  
+```
 
-P = matrix(data = c(p,1-p,0,q,0,1-q,0,r,1-r),
-nrow =3, byrow = TRUE) 
- 
+---
 
-mc = new("markovchain", transitionMatrix = P) [1½]
-mc} 
- 
+```{r}
+test_mc <- markovchain(0.5,0.3,0.2)
+```
+```{r}
+steadyStates(test_mc)
+```
 
-(ii)
+---
+
+#### Exercise 2
+
+Assume that p = 0.75 and r = 0.25. 
+(ii) Construct R code that calculates the stationary distribution of Xt for values of 
+q from 0.1 to 0.9 inclusive, at intervals of 0.1, pasting your results into your 
+answer script. [7] 
+
+
+
+```{r}
 statdist = matrix(data = 0, nrow = 3, ncol = 9) 
  
 
 for(i in 1:9){ 
- 
-
-q = 0.1*i 
- 
-
-mc = markovchain(p = 0.75, q, r = 0.25) 
- 
-
-statdist[,i] = steadyStates(mc)} 
- 
+  q = 0.1*i 
+  mc = markovchain(p = 0.75, q, r = 0.25) 
+  statdist[,i] = steadyStates(mc)} 
 
 statdist 
  
+```
 
- [,1] [,2] [,3] [,4] [,5] [,6] [,7] [,8] [,9]
-[1,] 0.08 0.16 0.24 0.32 0.4 0.48 0.56 0.64 0.72
-[2,] 0.20 0.20 0.20 0.20 0.2 0.20 0.20 0.20 0.20
-[3,] 0.72 0.64 0.56 0.48 0.4 0.32 0.24 0.16 0.08
 
- 
+--- 
 
  Assume that p = 0.75 and r = 0.25. 
 (ii) Construct R code that calculates the stationary distribution of Xt for values of 
@@ -73,7 +115,14 @@ answer script. [7]
 (iii) Plot a graph showing the stationary distributions of Xt calculated in part (ii) as 
 a function of q. You should include three separately coloured lines on your 
 graph, each line representing the stationary probabilities of each state. [8] 
- [Total 20] CS2B A2021–3 
+
+---
+
+(iii) Plot a graph showing the stationary distributions of Xt calculated in part (ii) as 
+a function of q. You should include three separately coloured lines on your 
+graph, each line representing the stationary probabilities of each state. 
+
+---
 
 (iii)
 q = seq(from = 0.1, to = 0.9, by = 0.1) 
