--- a/00-H1-CS1B-ASI-March-2021/Question_1.Rmd
+++ b/00-H1-CS1B-ASI-March-2021/Question_1.Rmd
@@ -9,6 +9,24 @@ output:
       countIncrementalSlides: false
 ---
 
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(magrittr)
+library(knitr)
+library(dplyr)
+library(janitor)
+
+
+```
+
+```{css, echo=FALSE}
+pre {
+  background: #ADD8E6;
+  max-width: 100%;
+  overflow-x: scroll;
+}
+```
+
 * Introduction to R for Actuarial Students
 
 * CS1B Curriculum
@@ -21,7 +39,7 @@ output:
 
 
 Part 1
-===========================
+
 The following amounts are the sizes of claims (in £) on house insurance policies for a 
 certain type of repair. 
 
@@ -34,8 +52,8 @@ certain type of repair.
 
 ---
 
-Part 1
-==============
+### Part 1
+
 
 Enter data in R. 
 
@@ -47,8 +65,8 @@ mydata <- c(1990,2400,2150,2090,2300,
 
 ---
 
-Part 1
-==============
+### Part 1
+
 
  Calculate Q1, Q2, Q3 and Inter-quartile range. (4)
 
@@ -77,8 +95,7 @@ IQR(mydata)
 
 ---
 
-Part 3
-=======================
+### Part 3
 
 Determine the sample mean and variance of the data. 
 
@@ -117,8 +134,9 @@ Since the p-value is $2.2\times 10^{-16}$ is less than 5%, there is sufficient e
 
 ---
 
-Part 5
-===============================
+### Part 5
+
+
 
 Assuming the data to be normally distributed, calculate the probability of a claim amount 
 exceeding £2300. 
@@ -132,8 +150,8 @@ pnorm(2300,mean = xbar , sd = sqrt(Ssquare) ,lower.tail = FALSE)
 
 ---
 
-Part 6
-========================
+### Part 6
+
 
 Calculate the revised mean and median after removing the largest two values from the 
 dataset. Comment on the result.
@@ -159,7 +177,7 @@ rev(sort(mydata))[1:2]
 mydata1 = mydata[mydata < max(mydata)] 
 ```
 
-
+---
 
 ```{r}
 mydata1 = mydata[mydata < max(mydata)] 
@@ -177,6 +195,12 @@ mean(mydata2)
 median(mydata2) 
 ```
 
+---
 
 Impact of removing outliers from the data has led to the mean and median being almost equal. Earlier the 
 mean was higher than median, which shows that the mean is more likely to be affected by outliers. 
+
+---
+
+
+---
