--- a/00-J1-CS1B-ASI-September-2021/Question_3.Rmd
+++ b/00-J1-CS1B-ASI-September-2021/Question_3.Rmd
@@ -12,16 +12,21 @@ output:
 A child tosses n coins and the outcome of heads and tails are recorded in n samples as
 X1, X2, …… Xn, where, Xi’s are independent Bernoulli variables with p = 0.5. The total 
 outcome of n variables is Y = X1 +……. + Xn
-i) Specify the distribution of Y (2)
-ii) Simulate a sample of 10 values for Y (2)
-iii) Assess the value of Y for the sample created in (ii) (2)
-iv) what is the probability of Y = 4 (1)
-[7]
+
+
+1. Specify the distribution of Y (2)
+
+2. Simulate a sample of 10 values for Y 
+
+3.  Assess the value of Y for the sample created in (ii) (2)
+4.  what is the probability of Y = 4 
 
 ---
 
-Solution 3:
+#### Solution 3:
+
 i) If X1, X2, …… Xn follows Bernoulli distribution with p = 0.5 (1)
+
 Then Y follows binomial distribution ~ Bin(n,p) as sum of independent Bernoulli distribution 
 results in binomial distribution with n trials and p is the probability of success. (1)
 
@@ -31,16 +36,27 @@ ii) Since ‘n’ is not specified in the question, sample simulations of Y can 
 value of ‘n’. The answer below is calculated using n = 10, however marks are allotted to 
 simulations of Y, calculated using any value of ‘n’.
 R Code
+
+```{r}
 n = 10
 p = 0.5
-Y ~ rbinom(10, n, p)
+```
+
+```{r}
+Y = rbinom(10, n, p)
+
 Y
+```
+
 Values of y from R (since these are random values, answers for each individual may vary from 
 the numbers stated below, please evaluate accordingly)
 5 4 4 5 2 6 5 4 2 5 (2)
 ---
 
-iii) The sample simulated in part (ii) are representative value of variable Y itself. Hence, no further 
+iii) 
+* The sample simulated in part (ii) are representative value of variable Y itself. 
+
+* Hence, no further 
 calculation required to assess the value of variable Y. 
 ---
 
